# Samara_HAL

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
Samara_HAL/: CMakeLists.txt  GPIO_interface.h  common_interface.h  gpio_interface.h  iomux_interface.h  timer_interface.h  usart_interface.h
Samara_HAL/public/: sal_adc_interface.h  sal_common.h  sal_common_interface.h  sal_dma_interface.h  sal_error.h  sal_gpio_interface.h  sal_i2c_interface.h  sal_iomux_interface.h  sal_timer_interface.h  sal_usart_interface.h
tests/: CMakeLists.txt  testGPIO.c  testGPIOcxx.cpp
